<resources>
    <string name="app_name">RepositoriesGit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">avatar</string>
    <string name="repo">Repo :</string>
    <string name="owner">Owner :</string>
    <string name="reponame">RepoName :</string>
    <string name="owners">Owner :</string>
    <string name="description">Description :</string>
    <string name="created_at">Created at :</string>
</resources>