<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="details"
            type="com.asoom.domain.entity.RepoDetails" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.DetailsFragment"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="220dp"
            android:layout_height="190dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            loadImageFromUrl="@{details.owner.avatar_url}"
            />

        <TextView
            android:id="@+id/repo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/reponame"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/darker"
            />
        <TextView
            android:id="@+id/repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/repo_text"
            app:layout_constraintStart_toEndOf="@id/repo_text"
            android:text="@{details.name}"
            android:layout_marginStart="3dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/darker"
            />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="@id/repo_text"
            app:layout_constraintTop_toBottomOf="@id/repo_text"
            android:text="@string/owners"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/darker"
            />
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/login_text"
            app:layout_constraintTop_toTopOf="@id/login_text"
            android:text="@{details.owner.login}"
            android:layout_marginStart="3dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/darker"
            />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="@id/login_text"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            android:text="@string/description"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/darker"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:inputType="textMultiLine"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toStartOf="@id/description_text"
            app:layout_constraintTop_toBottomOf="@id/description_text"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@{details.description}"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/darker"
            android:ellipsize="end"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/createdDate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="@id/description_text"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:text="@string/created_at"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/darker"
            />

        <TextView
            android:id="@+id/createdDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/createdDate_text"
            app:layout_constraintTop_toTopOf="@id/createdDate_text"
            android:textSize="19sp"
            android:textStyle="bold|italic"
            android:textColor="@color/darker"
            android:paddingStart="6dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>